--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
-    <title>Todo List</title>
+    <title>MyTodoMovies</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
